[package]
name = "download_papertrail"
authors = ["Julian Giamblanco <giamblanco.julian@gmail.com>"]
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-compression = { version = "0.4.5", features = ["tokio", "gzip"] }
bytes = { version = "1.5.0", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.9", features = ["derive", "env"] }
csv = "1.3.0"
csv-async = { version = "1.2.6", features = ["tokio", "tokio-stream"] }
dotenv = "0.15.0"
futures = "0.3.29"
lazy_static = "1.4.0"
reqwest = { version = "0.11.22", features = ["stream"] }
serde = { version = "1.0.193", features = ["derive", "alloc"] }
tempfile = "3.8.1"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["full"] }

[profile.release]
lto = true
